manifests/nginx-lmao/00nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lmao
  namespace: nginx-lmao
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx-lmao
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.3-alpine
          ports:
            - containerPort: 80
      restartPolicy: Always
