manifests/nginx-lmao/00ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lmao
  namespace: nginx-lmao
spec:
  selector:
    app: nginx-lmao
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-lmao-ingressroute
  namespace: nginx-lmao
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lmao.thexiao77.com`)
      kind: Rule
      services:
        - name: nginx-lmao
          port: 80
